--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
 <header class="header">
 	<div class="header-logo">
-		<a href="/"><img class="logo-img normal-logo" src="/images/question2answer-logo-white-350x40.png" alt="Question2Answer logo"></a>
+		<a href="/"><img class="logo-img normal-logo" src="{{ site.baseurl }}/images/question2answer-logo-white-350x40.png" alt="Question2Answer logo"></a>
 	</div>
 	<nav class="top-nav main-nav">
 		{% for navpage in site.nav.main %}
