--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
 	<meta name="description" content="{{ site.description }}">
 
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
 	{% include analytics.html %}
 </head>
 
