--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 	</div>
 	<nav class="top-nav main-nav">
 		{% for navpage in site.nav.main %}
-			<a class="main-nav-link" href="{{ navpage.path }}">{{ navpage.name }}</a>
+			<a class="main-nav-link" href="{{ site.baseurl }}{{ navpage.path }}">{{ navpage.name }}</a>
 		{% endfor %}
 		{% for navpage in site.nav.second %}
 			<a class="main-nav-link {{ navpage.class | default: '' }}" href="{{ navpage.url }}">{{ navpage.name }}</a>
