--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 			<a class="main-nav-link" href="{{ site.baseurl }}{{ navpage.path }}">{{ navpage.name }}</a>
 		{% endfor %}
 		{% for navpage in site.nav.second %}
-			<a class="main-nav-link {{ navpage.class | default: '' }}" href="{% if navpage.url startswith '/' %}{{ site.baseurl }}{% endif %}{{ navpage.url }}">{{ navpage.name }}</a>
+			<a class="main-nav-link {{ navpage.class | default: '' }}" href="{% if navpage.url | slice: 0, 1 == '/' %}{{ site.baseurl }}{% endif %}{{ navpage.url }}">{{ navpage.name }}</a>
 		{% endfor %}
 	</nav>
 </header>
