--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
 	<nav class="footer-nav">
 		{% for navpage in site.nav.footer %}
-			<a class="footer-nav-link" href="{% if navpage.url | slice: 0, 1 == '/' %}{{ site.baseurl }}{% endif %}{{ navpage.url }}">{{ navpage.name }}</a>
+			<a class="footer-nav-link" href="{% if navpage.url contains 'http' %}{{ navpage.url }}{% else %}{{ site.baseurl }}{{ navpage.url }}{% endif %}">{{ navpage.name }}</a>
 		{% endfor %}
 	</nav>
 	<div class="credit">
